--- a/.gitignore
+++ b/.gitignore
@@ -9,23 +9,45 @@ env/
 ENV/
 .venv/
 
-# docker-compose.yml
-# .gitpod.yml
-# Environment variables
+# Environment variables and sensitive configuration
 .env
+.env.*
 .env.local
 .env.production
+.env.development
+.env.staging
+*.env
+
+# API Keys and secrets (in case someone hardcodes them)
+api_keys.txt
+secrets.txt
+credentials.json
+service-account*.json
+*api_key*
+*secret*
 
 # Database
 *.db
 *.sqlite3
 compliance.db
+*.sql
 
 # Uploads and temporary files
 uploads/
 temp/
 *.tmp
 *.log
+logs/
+/test.txt
+/test_upload.txt
+
+# SSL certificates and keys
+*.key
+*.pem
+*.crt
+*.cert
+*.p12
+*.pfx
 
 # IDE
 .vscode/
@@ -37,12 +59,16 @@ temp/
 # OS
 .DS_Store
 Thumbs.db
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
 .tox/
+.nyc_output/
 
 # Documentation
 docs/_build/
@@ -51,3 +77,25 @@ docs/_build/
 build/
 dist/
 *.egg-info/
+
+# Frontend
+frontend/node_modules/
+frontend/build/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+frontend/.env.production
+frontend/.env.development
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Mac
+.DS_Store?
+.DS_Store
